--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <!-- Intro Section -->
 <section class="relative overflow-hidden mb-2">
   <!-- The video -->
-  <video autoplay muted loop class="w-full h-full object-cover absolute z-0">
+  <video autoplay [muted]="true" loop class="w-full h-full object-cover absolute z-0">
     <source src="assets/video/video2.mp4" type="video/mp4">
   </video>
 
