--- a/src/app/user/auth-modal/auth-modal.component.html
+++ b/src/app/user/auth-modal/auth-modal.component.html
@@ -3,7 +3,7 @@
 
       <app-tabs-container>
             <!-- Login Form -->
-            <app-tab>
+            <app-tab tabTitle="Login">
                   <form>
                         <!-- Email -->
                         <div class="mb-3">
@@ -28,7 +28,7 @@
 
 
             <!-- Registration Form -->
-            <app-tab>
+            <app-tab tabTitle="Register">
                   <form>
                         <!-- Name -->
                         <div class="mb-3">
