--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,5 +1,5 @@
-<input [formControl]="control" type="text" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
-duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" placeholder="Enter Name" />
+<input [formControl]="control" [type]="type" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" [placeholder]="placeholder" />
 
 
 <ng-container *ngIf="control.touched && control.dirty">
@@ -14,6 +14,10 @@ duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" 
             characters long.
             it must be at least
             {{control.errors?.['minlength'].requiredLength }}
+      </p>
+
+      <p *ngIf="control.errors?.['email']" class="text-red-400">
+            Enter a valid email.
       </p>
 
 </ng-container>
