--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -3,14 +3,12 @@
       <div class="mb-3">
             <label class="inline-block mb-2">Name</label>
             <!--The Shared Input Component-->
-            <app-input [control]="name"></app-input>
+            <app-input [control]="name" placeholder="Enter your name.."></app-input>
       </div>
       <!-- Email -->
       <div class="mb-3">
             <label class="inline-block mb-2">Email</label>
-            <input type="email" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
-duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" placeholder="Enter Email" />
-
+            <app-input [control]="email" placeholder="Enter Email.." type="email"></app-input>
 
       </div>
       <!-- Age -->
