--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -16,7 +16,7 @@ duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" 
       </p>
 
       <p *ngIf="control.errors?.['minlength']" class="text-red-400">
-            The name you entered is
+            The Input you entred is
             {{ control.errors?.['minlength'].actualLength}}
             characters long.
             it must be at least
