--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -32,7 +32,8 @@
             <app-input [control]="phoneNumber" format="(000)000-0000"></app-input>
       </div>
       <button type="submit" class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition
-hover:bg-indigo-500">
+hover:bg-indigo-500 disabled:opacity-75 disabled:cursor-not-allowed disabled:bg-indigo-400"
+            [disabled]="!registgerForm.valid">
             Submit
       </button>
 </form>
