--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,11 +7,11 @@
                   <!-- Primary Navigation -->
                   <ul class="flex flex-row mt-1">
                         <!-- Navigation Links -->
-                        <li *ngIf="!(auth.isAuthenticated$ | async); else authLinks">
+                        <li *ngIf="auth.isAuthenticated$ | async; else authLinks">
                               <a class="px-2" href="#" (click)="openModal($event)">Login / Register</a>
                         </li>
 
-                        <!--Auth links-->
+                        <!--Auth links based on user state !-->
                         <ng-template #authLinks>
                               <li>
                                     <a class="px-2" href="#">Manage</a>
