--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -34,4 +34,8 @@ duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" 
       <p *ngIf="control.errors?.['noMatch']" class="text-red-400">
             passwords do not match.
       </p>
+
+      <p *ngIf="control.errors?.['emailTaken']" class="text-red-400">
+            Email Taken . Please try another email.
+      </p>
 </ng-container>
