--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -32,7 +32,7 @@
                         </ng-template>
 
                         <li>
-                              <a mat-button class="px-2" href="#">About</a>
+                              <a mat-button class="px-2" href="/about">About</a>
 
                         </li>
 
