refactore the logout

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
                               </li>
 
                               <li>
-                                    <button mat-button class="px-2" href="#" (click)="signUserOut($event)">Sign
+                                    <button mat-button class="px-2" href="#" (click)="auth.signUserOut($event)">Sign
                                           Out</button>
 
                               </li>
