--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Intro Section -->
-<section class="relative overflow-hidden mb-2">
+<section class="relative overflow-hidden mb-2 ml-2 mr-2">
       <!-- The video -->
       <video autoplay [muted]="true" loop class="w-full h-full object-cover absolute z-0">
             <source src="assets/video/video2.mp4" type="video/mp4">
