--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -1,10 +1,12 @@
 <!-- Top Bar -->
 <section class="container mx-auto my-8 bg-secondary p-6">
       <div class="rounded relative flex justify-between">
-            <a routerLink="/upload" class="bg-indigo-400 text-white py-4 px-10 text-xl">Upload Videos</a>
+            <a mat-stroked-button routerLink="/upload" class="bg-indigo-400 text-white py-4 px-10 text-xl">
+                  Upload Videos <mat-icon>cloud_upload</mat-icon>
+            </a>
 
             <!-- Sort Videos -->
-            <select class="text-black px-8 text-xl outline-none appearance-none">
+            <select (change)="sort($event)" class="text-black px-8 text-xl outline-none appearance-none">
                   <option value="1">Recent Uploads</option>
                   <option value="2">Oldest Uploads</option>
             </select>
