--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -15,7 +15,7 @@
             </div>
 
             <!-- Video Editor -->
-            <div>
+            <div *ngIf="file">
 
                   <!-- Form -->
                   <form>
