--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -4,9 +4,9 @@
             <div class="font-bold mb-6">Upload Video</div>
 
             <!-- Upload Dropbox -->
-            <div app-block-event (dragend)="isDragged = false" (dragover)="isDragged = true"
-                  (dragenter)="isDragged = true" (dragleave)="isDragged = false" (mauseleave)="isDragged = false"
-                  (drop)="storeFile($event)" [ngClass]="{
+            <div *ngIf="!isValidFileUploaded; else uploadFormDetails" app-block-event (dragend)="isDragged = false"
+                  (dragover)="isDragged = true" (dragenter)="isDragged = true" (dragleave)="isDragged = false"
+                  (mauseleave)="isDragged = false" (drop)="storeFile($event)" [ngClass]="{
                   'bg-indigo-400 border-indigo-400 border-solid': isDragged
             }" class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed
             border-gray-400 transition duration-500 hover:text-white
@@ -15,7 +15,7 @@
             </div>
 
             <!-- Video Editor -->
-            <div *ngIf="file">
+            <ng-template #uploadFormDetails>
 
                   <!-- Form -->
                   <form>
@@ -47,6 +47,6 @@
                               </button>
                         </div>
                   </form>
-            </div>
+            </ng-template>
       </div>
 </section>
