--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -18,7 +18,7 @@
             <ng-template #uploadFormDetails>
 
                   <!-- Form -->
-                  <form>
+                  <form [formGroup]="videoFormGroup" (ngSubmit)="uploadFile()">
                         <!-- Screenshots -->
                         <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
                         <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
@@ -36,13 +36,13 @@
                         <!-- Title -->
                         <div class="mt-4">
                               <label class="block text-xl mb-4">Title</label>
-                              <input type="text" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+                              <input [formControl]="title" type="text" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
               duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400">
                         </div>
 
                         <div class="mt-4 text-right">
-                              <button type="submit"
-                                    class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none">
+                              <button [disabled]="isFormOnSubmit" type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none
+                                    disabled:cursor-not-allowed disabled:bg-indigo-400">
                                     Publish
                               </button>
                         </div>
