--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -17,6 +17,10 @@
             <!-- Video Editor -->
             <ng-template #uploadFormDetails>
 
+                  <app-alert *ngIf="showAlert" [color]="alertColor">
+                        <p>{{ alertMsg }}</p>
+                  </app-alert>
+
                   <!-- Form -->
                   <form [formGroup]="videoFormGroup" (ngSubmit)="uploadFile()">
                         <!-- Screenshots -->
@@ -41,7 +45,7 @@
                         </div>
 
                         <div class="mt-4 text-right">
-                              <button [disabled]="isFormOnSubmit" type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none
+                              <button [disabled]="isInSubmition" type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none
                                     disabled:cursor-not-allowed disabled:bg-indigo-400">
                                     Publish
                               </button>
