add upload progress

--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -19,6 +19,7 @@
 
                   <app-alert *ngIf="showAlert" [color]="alertColor">
                         <p>{{ alertMsg }}</p>
+                        <p>{{ percentage | percent}}</p>
                   </app-alert>
 
                   <!-- Form -->
