--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -47,13 +47,14 @@
                         <!-- Title -->
                         <div class="mt-4">
                               <label class="block text-xl mb-4">Title</label>
-                              <input [formControl]="title" type="text" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
-              duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400">
+                              <input [disabled]="isInSubmition ? true : false" [formControl]="title" type="text"
+                                    class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+              duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400 disabled:cursor-not-allowed">
                         </div>
 
                         <div class="mt-4 text-right">
                               <button [disabled]="isInSubmition" type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none
-                                    disabled:cursor-not-allowed disabled:bg-indigo-400">
+                                    disabled:cursor-not-allowed disabled:bg-indigo-500">
                                     Publish
                               </button>
                         </div>
