--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -4,15 +4,19 @@
             <div class="font-bold mb-6">Upload Video</div>
 
             <!-- Upload Dropbox -->
-            <div *ngIf="!isValidFileUploaded; else uploadFormDetails" app-block-event (dragend)="isDragged = false"
-                  (dragover)="isDragged = true" (dragenter)="isDragged = true" (dragleave)="isDragged = false"
-                  (mauseleave)="isDragged = false" (drop)="storeFile($event)" [ngClass]="{
-                  'bg-indigo-400 border-indigo-400 border-solid': isDragged
-            }" class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed
-            border-gray-400 transition duration-500 hover:text-white
-            hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl">
-                  <h5>Drop your file here (mp4 only!)</h5>
-            </div>
+            <ng-container *ngIf="!isValidFileUploaded; else uploadFormDetails">
+                  <div app-block-event (dragend)="isDragged = false" (dragover)="isDragged = true"
+                        (dragenter)="isDragged = true" (dragleave)="isDragged = false" (mauseleave)="isDragged = false"
+                        (drop)="storeFile($event)" [ngClass]="{
+                        'bg-indigo-400 border-indigo-400 border-solid': isDragged
+                  }" class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed
+                  border-gray-400 transition duration-500 hover:text-white
+                  hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl">
+                        <h5>Drop your file here (mp4 only!)</h5>
+                  </div>
+                  <input type="file" class="mt-4" (change)="storeFile($event)" />
+            </ng-container>
+
 
             <!-- Video Editor -->
             <ng-template #uploadFormDetails>
@@ -47,7 +51,7 @@
                         <!-- Title -->
                         <div class="mt-4">
                               <label class="block text-xl mb-4">Title</label>
-                              <input [disabled]="isInSubmition ? true : false" [formControl]="title" type="text"
+                              <input [disabled]="isInSubmition" [formControl]="title" type="text"
                                     class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
               duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400 disabled:cursor-not-allowed">
                         </div>
