--- a/src/app/video/edit/edit.component.html
+++ b/src/app/video/edit/edit.component.html
@@ -2,12 +2,12 @@
       <p class="text-2xl font-bold">Edit Video</p>
 
       <!-- Form -->
-      <form>
+      <form [formGroup]="editGroup">
             <!-- Title -->
             <div class="mt-4">
                   <label class="block text-xl mb-4">Title</label>
-                  <input placeholder="Enter Title" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
-          duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400">
+                  <app-input [control]="title" placeholder="Enter video title ">
+                  </app-input>
             </div>
 
             <div class="mt-4 text-right">
