--- a/src/app/video/edit/edit.component.html
+++ b/src/app/video/edit/edit.component.html
@@ -1,8 +1,12 @@
 <app-modal modalID="editClip">
       <p class="text-2xl font-bold">Edit Video</p>
 
+      <app-alert [ngClass]="alertColor" *ngIf="showAlert">
+            <p>{{ alertMsg }}</p>
+      </app-alert>
+
       <!-- Form -->
-      <form [formGroup]="editGroup">
+      <form [formGroup]="editGroup" (ngSubmit)="submit()">
             <!-- Title -->
             <div class="mt-4">
                   <label class="block text-xl mb-4">Title</label>
@@ -11,8 +15,8 @@
             </div>
 
             <div class="mt-4 text-right">
-                  <button type="submit"
-                        class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 focus:outline-none">
+                  <button [disabled]="isInSubmition" type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none
+                                    disabled:cursor-not-allowed disabled:bg-indigo-500">
                         Update
                   </button>
             </div>
