--- a/src/app/video/edit/edit.component.html
+++ b/src/app/video/edit/edit.component.html
@@ -1,7 +1,7 @@
 <app-modal modalID="editClip">
       <p class="text-2xl font-bold">Edit Video</p>
 
-      <app-alert [ngClass]="alertColor" *ngIf="showAlert">
+      <app-alert [color]="alertColor" *ngIf="showAlert">
             <p>{{ alertMsg }}</p>
       </app-alert>
 
