--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -4,7 +4,8 @@
             <div class="font-bold mb-6">Upload Video</div>
 
             <ng-container>
-                  <div *ngIf="!ffmpegService.isReady; else uploadForm" class="flex flex-row w-100 justify-center">
+                  <div *ngIf="!ffmpegService.isReady || isInProccess; else uploadForm"
+                        class="flex flex-row w-100 justify-center">
                         <mat-spinner></mat-spinner>
                   </div>
             </ng-container>
@@ -48,15 +49,11 @@
                               <!-- Screenshots -->
                               <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
                               <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-                                    <div class="border-8 cursor-pointer border-green-400">
-                                          <img src="assets/img/1.jpg">
+                                    <div *ngFor="let screenshot of screenshots"
+                                          class="border-8 cursor-pointer border-green-400">
+                                          <img [src]="screenshot | safeURL">
                                     </div>
-                                    <div class="border-8 cursor-pointer border-transparent">
-                                          <img src="assets/img/2.jpg">
-                                    </div>
-                                    <div class="border-8 cursor-pointer border-transparent">
-                                          <img src="assets/img/3.jpg">
-                                    </div>
+
                               </div>
 
                               <!-- Title -->
