store screenshot blob in firebase

--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -53,8 +53,10 @@
                               <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
                               <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
                                     <div *ngFor="let screenshot of screenshots" class="border-8 cursor-pointer"
-                                          [ngClass]="{'border-green-500 border-solid' : selectedScreenShot === screenshot}">
-                                          <img (click)="slectThumbnail($event)" [src]="screenshot | safeURL">
+                                          [ngClass]="{'border-green-500 border-solid' : selectedScreenShot === screenshot,
+                                                       'border-transparent': screenshot !== selectedScreenShot }"
+                                          (click)="selectedScreenShot = screenshot">
+                                          <img [src]="screenshot | safeURL">
                                     </div>
 
                               </div>
