--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -36,7 +36,7 @@
                               {{ clip.title }}
                         </a>
 
-                        <button mat-stroked-button (click)="copyToCliboard($event, clip.docId)"
+                        <button mat-button (click)="copyToCliboard($event, clip.docId, 'link Copied!', 'Dimiss')"
                               class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded">
                               Copy Link
                         </button>
